syntax = "proto3"; 

package flightanalyzer; // логическое имя пакета
// Указываем пакет для Java, чтобы не путались классы
option java_multiple_files = true;
option java_package = "com.skycalm.analyzer.grpc";

import "google/protobuf/empty.proto"; // готовый Empty

message FlightRequest { 
    string flightNumber = 1;
    string departureDate = 2; // формат: "2025-03-30"
}

message FlightResponse {
    string routeSummary = 1;
    string turbulenceInfo = 2;
    string weatherInfo = 3;
    string message = 4;
    string recommendation = 5;
}

message TestMessageRequest {
    string text = 1;
}

message TestMessageResponse {
    string response = 1;
}

service FlightAnalyzerService {
    rpc AnalyzeFlight(FlightRequest) returns (FlightResponse);
}

message Obj {
    int32 id = 1;
    string name = 2;
    int32 age = 3;
    bool status = 4;
}

message ObjResponse {
    TestMessageResponse message = 1;
    Obj obj = 2;
}

service TestService {
    rpc Test(TestMessageRequest) returns (TestMessageResponse);
    rpc sendText(TestMessageRequest) returns (TestMessageResponse);
    rpc pingWithNoParametrs(google.protobuf.Empty) returns (TestMessageResponse);
    rpc postObject(Obj) returns (ObjResponse); 
}